--- a/inner/assets/css/styles.css
+++ b/inner/assets/css/styles.css
@@ -11194,3 +11194,7 @@ form .row:first-child .floating-label-form-group {
   }
 
 
+  ul#menu-support {
+    display: flex;
+    flex-direction: column;
+}
